objects/EUR_ISP_Spend_Item__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Available_Amount__c</fullName>
        <formula>EUR_ISP_Total_Spend_Item__c - IF(ISNULL(EUR_ISP_Matched__c), 0, EUR_ISP_Matched__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Country_Code__c</fullName>
        <formula>EUR_ISP_Spend_Activity__r.EUR_ISP_Country_Code__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Dirty_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dirty Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>EUR_CRM_Wine_Spirits__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Lump_Sum_1__c</fullName>
        <label>Lump Sum 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Lump_Sum_2__c</fullName>
        <label>Lump Sum 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Matched__c</fullName>
        <label>Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Per_Unit_Amount__c</fullName>
        <label>Per Unit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_SKU_EU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity__c</fullName>
        <label>Spend Activity</label>
        <referenceTo>EUR_ISP_Spend_Activity__c</referenceTo>
        <relationshipLabel>Spend Items (EU)</relationshipLabel>
        <relationshipName>Spend_Items_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Total_Spend_Item__c</fullName>
        <formula>(EUR_ISP_Volume__c * EUR_ISP_Per_Unit_Amount__c) + EUR_ISP_Lump_Sum_1__c + EUR_ISP_Lump_Sum_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Unit_Of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Bottles</fullName>
                </value>
                <value>
                    <fullName>9L</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Litres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Spend Item (EU)</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Spend Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Items (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>